--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+            <version>2.1.3.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
